ver 0.6.1
- "placeholder" became the standard spelling for the placeholders option.
  ("empty_message" became the alternative one.)
- "combo" became the standard spelling for the combo boxes.
  ("choice" became the alternative one.)

ver 0.6.0
- Switched GUI library from wxWidgets to libui.
- Changed license from GPL to MIT.
- Fixed a bug that old components won't be freed when putting new components.

ver 0.5.1
- Added a predefined ID for the user's home directory.
- Added an option to rename the "Browse" button for path pickers. 
- Disabled c++ exceptions.
- Removed more codes from wxWidgets.
- Fixed crashes when opening URLs or files via the help menu.
- Removed compilation warnings about overriding.

ver 0.5.0
- Changed the json formats for "choice" and "check_array"
- Added command-line utils to embed json into exe.
- Added options for cross-platform support.
- Added a function for saving the previously executed command.
- Changed the json library from nlohmann/json to RapidJSON.
- Changed the format of gui_config.json
- Fixed a bug that help menu will be shown even if the size of ["help"] is zero.
- Fixed an error when the size of ["gui"] is zero.
- Fixed a GTK warning about component sizes.
- Removed more codes from wxWidgets.
- Applied optimazation for objective-c++ files.
- Applied link time optimization.
- Used cstdio instead of iostream.
- Removed compressed version from releases.

ver 0.4.1
- Raise errors when the command requires more components or there are unused components.
- Error messages bacame more detailed when failed to parse commands.
- Commands will be shown in the log when loading definitions.
- Fixed a bug that "%%" won't escsape the "%" symbol.
- Fixed a bug that the window is resizable on macOS and Linux.
- Fixed typos.
- Refined codes.

ver 0.4.0
- Changed license to GPL
- Added options for exit code.
- Added predefined ids for "%" and the executable directory.