@@ -1,0 +1,47 @@
+{
+    "gui": [
+        {
+            "label": "Component Sample",
+            "command": "echo combo: %a% & echo radio: %b%",
+            "button": "Echo!",
+            "components": [
+                {
+                    "type": "combo",
+                    "label": "Combo box",
+                    "items": [
+                        {
+                            "label": "one",
+                            "value": "1"
+                        },
+                        {
+                            "label": "two",
+                            "value": "2"
+                        },
+                        {
+                            "label": "three",
+                            "value": "3"
+                        }
+                    ]
+                },
+                {
+                    "type": "radio",
+                    "label": "Radio buttons",
+                    "items": [
+                        {
+                            "label": "one",
+                            "value": "1"
+                        },
+                        {
+                            "label": "two",
+                            "value": "2"
+                        },
+                        {
+                            "label": "three",
+                            "value": "3"
+                        }
+                    ]
+                }
+            ]
+        }
+    ]
+}
